--- a/fundamental-css-comprehension/style-resource.css
+++ b/fundamental-css-comprehension/style-resource.css
@@ -13,13 +13,14 @@ html {
 
 /* Selectors to be matched up with rulesets */
 
-.card article img
-.card footer
-.card header
-.card
+/*.card article img */
+/*.card footer */
+/*.card header */
+/*.card */
 
 /* Rulesets to be matched up with selectors */
 
+/*
 {
   width: 35em;
   height: 22em;
@@ -28,18 +29,22 @@ html {
   border: 0.2em solid black;
   border-radius: 1.5em;
 }
-
+*/
+/*
 {
   background-image: linear-gradient(to bottom,rgba(0,0,0,0.1), rgba(0,0,0,0));
   border-radius: 1.5em 1.5em 0 0;
 }
-
+*/
+/*
 {
   background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
   border-radius: 0 0 1.5em 1.5em;
 }
-
+*/
+/*
 {
   max-height: 100%
   float: right;
 }
+*/
